[tool.poetry]
name = "experitorch"
version = "0.1.0"
description = "A very simple experiment organizer for PyTorch projects"
authors = ["Louis-Émile Robitaille <emile.courriel@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
PyYAML = "^6.0"
scikit-learn = "^1.2.1"
torch = "^1.13.1"
tensorboard = "^2.11.2"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
isort = "^5.11.4"
pylint = "^2.15.10"
pytest = "^7.2.1"
black = "^22.12.0"
pre-commit = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
